<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="com.uhungry.activity.WellcomeActivity">

<!--    <ImageView
        android:id="@+id/ivCross"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        android:background="@drawable/icon_cross"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_255sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/logo"/>

        <com.uhungry.custom_widget.TextViewRobotoReguler
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/text_wellcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_20sdp"

            />


        <ImageView
            android:id="@+id/icCenterImg"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/circle_img"/>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_32sdp"
            android:text="@string/text_quick_search"
            android:textColor="@color/white"
            android:gravity="center"
            android:visibility="visible"
            android:textSize="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_2sdp"
            android:background="@drawable/red_btn_bg"/>


        <com.uhungry.custom_widget.TextViewRobotoMedium
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:gravity="center"
            android:text="@string/text_or"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="@color/app_black"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_16ssp" />


        <com.uhungry.custom_widget.TextViewRobotoMedium
            android:id="@+id/tvWellcomeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_8sdp"

            />

        <Button
            android:id="@+id/btnSetUp"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_32sdp"
            android:text="@string/btn_setup"
            android:textColor="@color/white"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:padding="@dimen/_2sdp"
            android:background="@drawable/red_btn_bg"/>

    </LinearLayout>
</RelativeLayout>
