<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/transperant1"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/_265sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/bg_subcription_alert"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_red_box"
            >

            <com.uhungry.custom_widget.TextViewRobotoMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:gravity="center"
                android:text="@string/text_finish"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/bg_field_white_circle"
                >
                <ImageView
                    android:id="@+id/ivCross"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/icon_cross"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_18sdp"

            >
            <ImageView
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/circle_img"/>

            <com.uhungry.custom_widget.TextViewRobotoMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:gravity="center"
                android:text="@string/text_like_rec"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textColor="@color/app_black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp">

                <CheckBox
                    android:id="@+id/chbLikeYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_txt_yes"
                    android:textColor="@color/app_black"
                    android:layout_marginRight="@dimen/_8sdp"
                    />

                <CheckBox
                    android:id="@+id/chbLikeNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_txt_no"
                    android:textColor="@color/app_black"
                    android:layout_marginLeft="@dimen/_8sdp"
                    />
            </LinearLayout>

            <com.uhungry.custom_widget.RippleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:elevation="@dimen/_4sdp"
                    android:text="@string/btn_txt_done"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/red_btn_bg"/>

            </com.uhungry.custom_widget.RippleView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>