<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    android:background="@color/transperant1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_dailog"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            >

            <com.uhungry.custom_widget.TextViewRobotoMedium
                android:id="@+id/tvDialogEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/text_email"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_5sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                > </View>

            <com.uhungry.custom_widget.TextViewRobotoMedium
                android:id="@+id/tvDialogSms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/text_sms"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_5sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyDailogCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_dailog"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            >

            <com.uhungry.custom_widget.TextViewRobotoMedium
                android:id="@+id/tvDialogCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/text_cancel"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_5sdp"
                />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>