<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:isScrollContainer="false"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/_290sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/search_bg"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:clickable="true"
            >

            <com.uhungry.custom_widget.EditTextRobotoReguler
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:hint="@string/text_search"
                android:textColorHint="@color/gray"
                android:textColor="@color/app_black"
                android:gravity="center"
                android:paddingRight="@dimen/_23sdp"
                android:paddingLeft="@dimen/_23sdp"
                android:background="@null"
                android:textSize="@dimen/_14ssp"
                android:layout_centerInParent="true"
                android:ems="14"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:focusableInTouchMode="true"
                >
            </com.uhungry.custom_widget.EditTextRobotoReguler>


            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/search_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:padding="@dimen/_1sdp"

                />
            <ImageView
                android:id="@+id/ivSearchCross"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/gray_cross_icon"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"

                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lycat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_gravity="center"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center"
                >
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvCatEmptyList"
                android:text="@string/text_no_grocery_found"
                android:gravity="center"
                android:visibility="gone"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/lvExpandable"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:childDivider="@color/white"
            android:dividerHeight="1dp"
            android:divider="@null"
            android:groupIndicator="@null" />


    </LinearLayout>

    <com.uhungry.custom_widget.TextViewRobotoReguler
        android:id="@+id/tvEmptyList"
        android:text="@string/text_no_ingredients_found"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/_5sdp"
        android:layout_centerInParent="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        />

</RelativeLayout>