<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/search_bg"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:clickable="true"
            >

            <com.uhungry.custom_widget.EditTextRobotoReguler
                android:id="@+id/etFavSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/text_search"
                android:textColorHint="@color/gray"
                android:textColor="@color/app_black"
                android:gravity="center"
                android:background="@null"
                android:textSize="@dimen/_14ssp"
                android:layout_centerInParent="true"
                android:ems="14"
                android:paddingRight="@dimen/_23sdp"
                android:paddingLeft="@dimen/_23sdp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:ellipsize="end"
                android:completionThreshold="1"
                android:scrollbars="none"
                android:focusableInTouchMode="true"
                >
            </com.uhungry.custom_widget.EditTextRobotoReguler>


            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/search_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:padding="@dimen/_1sdp"

                />
            <ImageView
                android:id="@+id/ivSearchCross"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/gray_cross_icon"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlViewMore"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/search_bg"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center"
            android:clickable="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_24sdp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:background="@drawable/red_btn_bg"
                android:layout_toLeftOf="@+id/tvViewMore"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingRight="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_10sdp"

                >
                <com.uhungry.custom_widget.TextViewRobotoReguler
                    android:id="@+id/tvCuisiinesName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_12ssp"
                    android:hint="Select Cuisines"
                    android:textColorHint="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:scrollbars = "horizontal"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_4sdp"
                    >
                </com.uhungry.custom_widget.TextViewRobotoReguler>
            </LinearLayout>

            <com.uhungry.custom_widget.TextViewRobotoReguler
                android:id="@+id/tvViewMore"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/text_view_more"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/red_btn_bg"
                >
            </com.uhungry.custom_widget.TextViewRobotoReguler>

        </RelativeLayout>

        <com.uhungry.custom_widget.TextViewRobotoMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_my_favourite"
            android:layout_marginTop="@dimen/_4sdp"
            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rycFavRecipeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:overScrollMode="never"
            android:scrollbars="none" />

    </LinearLayout>

    <com.uhungry.custom_widget.TextViewRobotoReguler
        android:id="@+id/tvNoRecored"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/text_no_fav_recipe_found"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />


</RelativeLayout>